@@ -1,5 +1,12 @@
 2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>
 
+-Modified SparseInpaint class present in code/algos to load a dictionary from a path.
+-Need to find a way to remove columns based on mask.
+
+/************************************************************************/
+
+2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>
+
 -Modified create_dictionary to store greyscale images.
 -Implemented an untested version of OMP in code/algos/
 
